fixed mobile scrollbar

--- a/src/components/data-display/list-with-filters/style.scss
+++ b/src/components/data-display/list-with-filters/style.scss
@@ -56,7 +56,7 @@
   .list-with-filters {
     display: flex;
     align-items: flex-start;
-    max-width: calc(100vw - 10px);
+    max-width: 100vw;
 
     &--child-transition {
       overflow: hidden;
@@ -66,12 +66,12 @@
       height: unset;
       min-width: 100%;
       margin: 0;
-      padding-left: 10px;
+      padding: 0 10px;
     }
 
     &__content {
       min-width: 100%;
-      padding-left: 10px;
+      padding: 0 10px;
     }
 
     &__filters-transition,
