--- a/src/components/navigation/horizontal-tabs/style.scss
+++ b/src/components/navigation/horizontal-tabs/style.scss
@@ -69,7 +69,7 @@
 
 @media screen and (max-width: $screen-md) {
   .horizontal-tabs {
-    padding-left: 10px;
+    padding: 0 10px;
 
     &__item {
       & > label {
