--- a/src/layouts/default/style.scss
+++ b/src/layouts/default/style.scss
@@ -54,7 +54,7 @@
     }
 
     &:deep(header) {
-      margin: 0 0 20px 10px;
+      margin: 0 10px 20px;
 
       & > h1 {
         font-size: $font-lg;
