--- a/src/views/settings/style.scss
+++ b/src/views/settings/style.scss
@@ -24,7 +24,7 @@
 @media screen and (max-width: $screen-md) {
   .settings {
     &__content {
-      padding-left: 10px;
+      padding: 0 10px;
     }
   }
 }
